--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aprendendo Efeitos com CSS</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Efeito TypeWriter</title>
 </head>
 <body>
-    
+    <div class="first-page">
+        <h1 id="fptitle" class="title-first-page">Van Ribeiro</h1>
+    </div>
 </body>
 </html>
