D003 R03 - Efeito Máquina de Escrever.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="first-page">
-        <h1 id="fptitle" class="title-first-page">Van Ribeiro</h1>
+        <hgroup class="page-head">
+            <h1 id="first-page-title" class="page-title">Van Ribeiro</h1>
+            <h5 class="page-subtitle">Desenvolvedora Web</h5>
+        </hgroup>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
