D004 R03 - Revisão de Media Queries.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/index.html
@@ -9,10 +9,19 @@
 </head>
 <body>
     <div class="first-page">
-        <hgroup class="page-head">
-            <h1 id="first-page-title" class="page-title">Van Ribeiro</h1>
-            <h5 class="page-subtitle">Desenvolvedora Web</h5>
-        </hgroup>
+        <div class="container">
+            <div class="first-head-page">
+                <div class="column-1">
+                    <img id="first-page-img" src="img/novo-logo-vanribeiro-dev.png" alt="Logo Van Ribeiro" class="img-fluid" />
+                </div>
+                <div class="column-2">
+                    <hgroup class="page-heads">
+                        <h1 class="page-title">Van Ribeiro</h1>
+                        <h5 class="page-subtitle">Desenvolvedora Web</h5>
+                    </hgroup>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
