Ajustes no CSS.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <div class="header-page">
-        <div class="header-group">
-            <div class="logo-img col-3">
-                <a href="index.html">
+        <div class="header-group ">
+            <div class="logo-img">
+                <a href="/">
                     <img class="logo img-fluid" src="img/novo-icone-256px.png" alt="Van Ribeiro Logo">
                 </a>
             </div>
-            <div class="header-page-title col-9">
-                <h1 class="header-page-title">VAN RIBEIRO</h1>
-                <p>desenvolvedora web front-end</p>
+            <div class="header-page-title">
+                <a class="link-title" href="/">
+                    <h1 class="header-page-title">VAN RIBEIRO</h1>
+                    <p>desenvolvedora web front-end</p>
+                </a>
             </div>
         </div>
     </div>
@@ -27,7 +29,7 @@
             <div class="short-bio">
                 <img class="img-bio img-fluid col-5" src="img/Minha foto.png" alt="Van Ribeiro" >
                 <p class="txt-bio col-7">
-                    Uma dev em frequente construção, que gosta de unir criatividade e tecnologia.
+                    Uma desenvolvedora web em frequente construção, que gosta de unir criatividade e tecnologia.
                 </p>
             </div>
         </div>
