Ajustes html/css. Precisa: ajustar index.html.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/curriculo/curriculo-vanessa-ribeiro.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/curriculo/curriculo-vanessa-ribeiro.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="bar-top">
             <div class="back-home">
-                <a class="back-to-home" href="https://vanribeiro.github.io/">←</a>
-                <a class="anchor-link home bold" href="https://vanribeiro.github.io/">Voltar</a>
+                <a class="back-to-home" href="/">←</a>
+                <a class="anchor-link home bold" href="/">Voltar</a>
             </div>
             <div class="switch-button" title="Claro/Escuro">
                 <input type="checkbox" id="switch-btn" class="switch switch-shadow" onclick="changeModeTheme()">
