--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
@@ -35,9 +35,9 @@
         </div>
         <div class="menu-page">
             <div class="container">
-                <a class="btn-menu" href="#">Portfolio</a>
-                <a class="btn-menu" href="#">Encontre-me!</a>
-                <a class="btn-menu" href="#">Currículo</a>
+                <a class="btn-menu" href="portfolio.html">Portfolio</a>
+                <a class="btn-menu" href="encontre-me.html">Encontre-me!</a>
+                <a class="btn-menu" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
             </div>
         </div>
     </main>
