Inclusão no tópicos trabalhos voluntários.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/curriculo/curriculo-vanessa-ribeiro.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/curriculo/curriculo-vanessa-ribeiro.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="bar-top">
             <div class="back-home">
-                <a class="back-to-home" href="/">←</a>
+                <a class="arrow-back" href="/">←</a>
                 <a class="anchor-link home bold" href="/">Voltar</a>
             </div>
             <div class="switch-button" title="Claro/Escuro">
@@ -61,12 +61,12 @@
                 <h4 class="section-title">PROJETOS</h4>
                 <section class="sub-section">
                     <h6 class="bold">Site Portfólio</h6>
-                    <a class="subtitle-italic" href="https://vanribeiro.github.io/" class="link-subtitle">https://vanribeiro.github.io/</a>
+                    <a href="https://vanribeiro.github.io/" class="link-subtitle">https://vanribeiro.github.io/</a>
                     <p class="normal-text">Criado utilizando o Framework Twitter Bootstrap e hospedado no GitHub Pages.</p>
                 </section>
                 <section class="sub-section">
                     <h6 class="bold">Sites para Estudo</h6>
-                    <a class="subtitle-italic" href="https://vanribeiro.github.io/portfolio">https://vanribeiro.github.io/portfolio</a>
+                    <a href="https://vanribeiro.github.io/portfolio">https://vanribeiro.github.io/portfolio</a>
                     <p class="normal-text">Criação de sites fictícios, sobre assuntos variados,
                         com o objetivo de treinar e estudar assuntos como HTML, CSS e JavaScript.
                     </p>
@@ -94,6 +94,21 @@
             </section>
             <section class="volunteer">
                 <h4 class="section-title">TRABALHO VOLUNTÁRIO</h4>
+                <section class="sub-section">
+                    <p class="section-subtitle">Mozilla | MDN</p>
+                    <a href="https://wiki.developer.mozilla.org/pt-BR/profiles/euvanribeiro">profile/euvanribeiro</a>
+                    <p class="subtitle-italic">Tradução e Revisão Técnica</p>
+                    <p>Dezembro/2019 – Atual</p>
+                    <p class="normal-text">Colaboração na tradução e revisão de texto publicados no site Mozilla MDN.</p>
+                </section>
+                <section class="sub-section">
+                    <p class="section-subtitle">Livro Pro Git 2</p>
+                    <p class="subtitle-italic">Tradução Colaborativa</p>
+                    <a href="https://git-scm.com/book/en/v2">Livro Original</a> |
+                    <a href="https://github.com/progit/progit2-pt-br">Repositório GitHub</a>
+                    <p>Dezembro/2019 – Atual</p>
+                    <p class="normal-text">Colaboração na tradução da 2º edição do livro <a href="https://git-scm.com/book/en/v2" target="_blank">Pro Git</a>, de Scott Chacon e Ben Straub, editora Apress. </p>
+                </section>
                 <section class="sub-section">
                     <p class="section-subtitle">Igreja Apostólica Hosana</p>
                     <p class="subtitle-italic">Gerenciamento de Mídias Sociais</p>
