Problema com Navegadores Resolvido. Páginas ajustadas para desktop e tablets.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/encontre-me.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/encontre-me.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="img/novo-icone-256px.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icones/novo-icone-256px.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>Encontre-me!</title>
 </head>
 <body>
     <div class="menu-icon">
-        <img class="ham-icon" src="img/menu.png" alt="menu">
+        <div class="container">
+            <img class="ham-icon" src="img/icones/menu.png" alt="menu">
+            <p class="close">X</p>
+            <a href="/">
+                <h1 class="title-menu-page">Encontre-me!</h1>
+            </a>
+        </div>
     </div>
-    <div class="menu">
-            <div class="header">
+    <div class="menu" id="top-menu">
+        <div class="header">
+            <div class="container">
                 <div class="header-group ">
                     <div class="logo-img">
                         <a href="/">
-                            <img class="logo img-fluid" src="img/novo-icone-256px.png" alt="Van Ribeiro Logo">
+                            <img class="logo img-fluid" src="img/icones/novo-icone-256px.png" alt="Van Ribeiro - Logo">
                         </a>
                     </div>
                     <div class="header-page-title">
@@ -28,22 +35,115 @@
                     </div>
                 </div>
             </div>
-            <div class="all-links container">
-                <a class="btn-menu" href="portfolio.html">Portfolio</a>
-                <a class="btn-menu" href="encontre-me.html">Encontre-me!</a>
-                <a class="btn-menu" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
-            </div>
+        </div>
+        <div class="all-links container">
+            <a class="btn-menu" href="portfolio.html">Portfolio</a>
+            <a class="btn-menu" href="encontre-me.html">Encontre-me!</a>
+            <a class="btn-menu" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
+        </div>
     </div>
     <main class="main">
         <div class="container">
-            
+            <div class="row">
+                <p class="col-12 intro-txt">
+                    Quer saber mais sobre mim e o que tenho publicado ultimamente?
+                    Essa é a minha lista de links atualizada!
+                </p>
+            </div>
+            <div class="content-page">
+                <div class="last-jobs">
+                    <h2 class="text-title">Meus Últimos Trabalhos</h2>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="link-group">
+                                <a href="https://vanribeiro.github.io/" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/briefcase.png" alt="Portfolio" title="Portfolio" />
+                                </a>
+                                <a class="link-social-media" href="https://vanribeiro.github.io/" target="_blank"> vanribeiro.github.io</a>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="link-group">
+                                <a href="https://addons.mozilla.org/pt-BR/firefox/addon/camel-letter-app/" target="_blank">
+                                    <img class="camel-icon icon-link-social-media" src="img/social-media/png/camel.png" alt="Camel Letter App" title="Camel Letter App" />
+                                </a>
+                                <a class="link-social-media" href="https://addons.mozilla.org/pt-BR/firefox/addon/camel-letter-app/" target="_blank"> /vanribeiro</a>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="link-group">
+                                <a href="https://medium.com/@vanribeiro.dev" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/medium.png" alt="Medium" title="Medium" />
+                                </a>
+                                <a class="link-social-media" href="https://medium.com/@vanribeiro.dev" target="_blank"> /vanribeiro</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="my-social-medias">
+                    <h2 class="text-title">Minhas Redes Sociais</h2>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="link-group">
+                                <a href="https://github.com/vanribeiro" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/github.png" alt="GitHub" title="GitHub" />
+                                </a>
+                                <a class="link-social-media" href="https://github.com/vanribeiro" target="_blank"> /vanribeiro</a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="link-group">
+                                <a href="https://codepen.io/vanribeiro/" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/codepen.png" alt="Code Pen" title="Code Pen" />
+                                    <a class="link-social-media" href="https://codepen.io/vanribeiro/" target="_blank"> /vanribeiro</a>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="link-group">
+                                <a href="https://www.behance.net/vanribeiro-dev" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/behance.png" alt="Behance" title="Behance">
+                                </a>
+                                <a class="link-social-media" href="https://www.behance.net/vanribeiro-dev" target="_blank"> /vanribeiro-dev </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="link-group">
+                                <a href="https://www.instagram.com/vanribeiro.dev" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/instagram.png" alt="Instagram" title="Instagram">
+                                </a>
+                                <a class="link-social-media" href="https://www.instagram.com/vanribeiro.dev" target="_blank"> /vanribeiro-dev </a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="link-group">
+                                <a href="https://www.linkedin.com/in/vanribeiro/" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/linkedin.png" alt="LinkedIn" title="LinkedIn"/>
+                                </a>
+                                <a class="link-social-media" href="https://www.linkedin.com/in/vanribeiro/" target="_blank"> /vanribeiro</a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="link-group">
+                                <a href="https://twitter.com/euvanribeiro" target="_blank">
+                                    <img class="icon-link-social-media" src="img/social-media/png/twitter.png" alt="Twitter" title="Twitter" />
+                                </a>
+                                <a class="link-social-media" href="https://twitter.com/euvanribeiro" target="_blank"> /euvanribeiro</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
         <div class="container">
             <div class="footer">
-                <p> © 2019 Van Ribeiro.</p>
+                <p> © 2019 <a class="footer-link" href="mailto:vanribeiro.dev@gmail.com">Van Ribeiro</a>.</p>
                 <p>Todos os direitos reservados.</p>
+                <p>Social Media Icons made by <a class="footer-link" href="https://www.flaticon.com/authors/pixel-perfect" target="_blank">Pixel Perfect</a> from <a class="footer-link" href="https://www.flaticon.com" target="_blank">www.flaticon.com</a></p>
             </div>
         </div>
     </footer>
