--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/portfolio.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/portfolio.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="img/novo-icone-256px.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icones/novo-icone-256px.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
     <div class="menu-icon">
-        <img class="ham-icon" src="img/menu.png" alt="menu">
-        <p class="close">X</p>
+        <div class="container">
+            <img class="ham-icon" src="img/icones/menu.png" alt="menu">
+            <p class="close">X</p>
+            <a href="/">
+                <h1 class="title-menu-page">Portfolio</h1>
+            </a>
+        </div>
     </div>
     <div class="menu" id="top-menu">
         <div class="header">
-            <div class="header-group ">
-                <div class="logo-img">
-                    <a href="/">
-                        <img class="logo img-fluid" src="img/novo-icone-256px.png" alt="Van Ribeiro Logo">
-                    </a>
-                </div>
-                <div class="header-page-title">
-                    <a class="link-title" href="/">
-                        <h1 class="header-page-title">VAN RIBEIRO</h1>
-                        <p>desenvolvedora web front-end</p>
-                    </a>
+            <div class="container">
+                <div class="header-group ">
+                    <div class="logo-img">
+                        <a href="/">
+                            <img class="logo img-fluid" src="img/icones/novo-icone-256px.png" alt="Van Ribeiro - Logo">
+                        </a>
+                    </div>
+                    <div class="header-page-title">
+                        <a class="link-title" href="/">
+                            <h1 class="header-page-title">VAN RIBEIRO</h1>
+                            <p>desenvolvedora web front-end</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -45,6 +52,7 @@
             <div class="footer">
                 <p> © 2019 Van Ribeiro.</p>
                 <p>Todos os direitos reservados.</p>
+                <p>Icon made by <a class="footer-link" href="https://www.flaticon.com/authors/pixel-perfect" target="_blank">Pixel Perfect</a> from <a class="footer-link" href="https://www.flaticon.com" target="_blank">www.flaticon.com</a></p>
             </div>
         </div>
     </footer>
