--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
@@ -4,47 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="img/novo-icone-256px.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icones/novo-icone-256px.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>Van Ribeiro</title>
 </head>
 <body>
     <div class="header-page">
-        <div class="header-group ">
-            <div class="logo-img">
-                <a href="/">
-                    <img class="logo img-fluid" src="img/novo-icone-256px.png" alt="Van Ribeiro Logo">
-                </a>
-            </div>
-            <div class="header-page-title">
-                <a class="link-title" href="/">
-                    <h1 class="header-page-title">VAN RIBEIRO</h1>
-                    <p>desenvolvedora web front-end</p>
-                </a>
+        <div class="container">
+            <div class="header-group ">
+                <div class="logo-img">
+                    <a href="/">
+                        <img class="logo img-fluid" src="img/icones/novo-icone-256px.png" alt="Van Ribeiro Logo">
+                    </a>
+                </div>
+                <div class="header-page-title">
+                    <a class="link-title col-4" href="/">
+                        <h1 class="header-page-title">VAN RIBEIRO</h1>
+                        <p>desenvolvedora web front-end</p>
+                    </a>
+                </div>
+                <nav class="social-medias">
+                    <a href="https://github.com/vanribeiro" target="_blank">
+                        <img class="icon-link-social-media" src="img/social-media/png/github-cassis.png" alt="GitHub" title="GitHub" />
+                    </a>
+                    <a href="https://www.instagram.com/vanribeiro.dev" target="_blank">
+                        <img class="icon-link-social-media" src="img/social-media/png/instagram-cassis.png" alt="Instagram" title="Instagram">
+                    </a>
+                    <a href="https://twitter.com/euvanribeiro" target="_blank">
+                        <img class="icon-link-social-media" src="img/social-media/png/codepen-cassis.png" alt="Twitter" title="Twitter" />
+                    </a>
+                </nav>
             </div>
         </div>
     </div>
     <main class="main">
         <div class="container">
-            <div class="short-bio">
-                <img class="img-bio img-fluid col-5" src="img/Minha foto.png" alt="Van Ribeiro" >
-                <p class="txt-bio col-7">
-                    Uma desenvolvedora web em frequente construção, que gosta de unir criatividade e tecnologia.
-                </p>
-            </div>
-        </div>
-        <div class="menu-page">
-            <div class="container">
-                <a class="btn-menu" href="portfolio.html">Portfolio</a>
-                <a class="btn-menu" href="encontre-me.html">Encontre-me!</a>
-                <a class="btn-menu" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
+            <div class="home">
+                <div class="short-bio">
+                    <img class="img-bio img-fluid col-5" src="img/Minha foto.png" alt="Van Ribeiro" >
+                </div>
+                <div class="menu-page">
+                    <p class="txt-bio">
+                        Uma desenvolvedora web em frequente construção, que gosta de unir criatividade e tecnologia.
+                    </p>
+                    <a class="btn-menu" href="portfolio.html">Portfolio</a>
+                    <a class="btn-menu" href="encontre-me.html">Encontre-me!</a>
+                    <a class="btn-menu" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
+                </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="container">
             <div class="footer">
-                <p> © 2019 Van Ribeiro.</p>
+                <p> © 2019 <a class="footer-link" href="mailto:vanribeiro.dev@gmail.com">Van Ribeiro</a>.</p>
                 <p>Todos os direitos reservados.</p>
             </div>
         </div>
