Alterações: cores menu responsivo.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/encontre-me.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/encontre-me.html
@@ -37,9 +37,9 @@
             </div>
         </div>
         <div class="all-links container">
-            <a class="btn-menu" href="portfolio.html">Portfolio</a>
-            <a class="btn-menu" href="encontre-me.html">Encontre-me!</a>
-            <a class="btn-menu" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
+            <a class="menu-rwd" href="portfolio.html">Portfolio</a>
+            <a class="menu-rwd" href="encontre-me.html">Encontre-me!</a>
+            <a class="menu-rwd" href="curriculo/curriculo-vanessa-ribeiro.html">Currículo</a>
         </div>
     </div>
     <main class="main">
