--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/index.html
@@ -25,13 +25,16 @@
                 </div>
                 <nav class="social-medias">
                     <a href="https://github.com/vanribeiro" target="_blank">
-                        <img class="icon-link-social-media" src="img/social-media/png/github-cassis.png" alt="GitHub" title="GitHub" />
+                        <img class="icon-link-social-media" src="img/social-media/png/github-cassis.png" alt="GitHub" title="@varibeiro" />
                     </a>
                     <a href="https://www.instagram.com/vanribeiro.dev" target="_blank">
-                        <img class="icon-link-social-media" src="img/social-media/png/instagram-cassis.png" alt="Instagram" title="Instagram">
+                        <img class="icon-link-social-media" src="img/social-media/png/instagram-cassis.png" alt="Instagram" title="@vanribeiro.dev">
+                    </a>
+                    <a href="https://codepen.io/vanribeiro/" target="_blank">
+                        <img class="icon-link-social-media" src="img/social-media/png/codepen-cassis.png" alt="Twitter" title="@vanribeiro" />
                     </a>
                     <a href="https://twitter.com/euvanribeiro" target="_blank">
-                        <img class="icon-link-social-media" src="img/social-media/png/codepen-cassis.png" alt="Twitter" title="Twitter" />
+                        <img class="icon-link-social-media" src="img/social-media/png/twitter_cassis.png" alt="@euvanribeiro">
                     </a>
                 </nav>
             </div>
