Atualização do dia 045.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/encontre-me.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/encontre-me.html
@@ -67,7 +67,7 @@
                                 <a href="https://addons.mozilla.org/pt-BR/firefox/addon/camel-letter-app/" target="_blank">
                                     <img class="camel-icon icon-link-social-media" src="img/social-media/png/camel.png" alt="Camel Letter App" title="Camel Letter App" />
                                 </a>
-                                <a class="link-social-media" href="https://addons.mozilla.org/pt-BR/firefox/addon/camel-letter-app/" target="_blank"> /vanribeiro</a>
+                                <a class="link-social-media" href="https://addons.mozilla.org/pt-BR/firefox/addon/camel-letter-app/" target="_blank"> Camel Letter App</a>
                             </div>
                         </div>
                         <div class="col-3">
