--- a/Projetos e Códigos/05 - Desafio Folha SP/index.html
+++ b/Projetos e Códigos/05 - Desafio Folha SP/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="cometas.js"></script>
+    <!-- <script src="espaconave.js"></script> -->
 </body>
 </html>
