Ajustes: estilo do canvas.

--- a/Projetos e Códigos/06 - Canvas/02 - Tutoriais da Web/01 - PieChart/index.html
+++ b/Projetos e Códigos/06 - Canvas/02 - Tutoriais da Web/01 - PieChart/index.html
@@ -12,7 +12,7 @@
         <canvas id="canvas" class="pie-chart" height="300" width="300"></canvas>
         <div class="title-chart">
             <div class="text">
-                <p>57</p>
+                <p id="status"></p>
                 <p>#100DiasDeCódigo</p>
             </div>
         </div>
